resources/testcases_static_checks/tests/positive/isDmfc/r12.rlsd
../../../tests_common_data/from-evaluation-section/r12.rlsd