resources/testcases_static_checks/tests/negative/isDmfa/r10.rlsd
../../../tests_common_data/from-evaluation-section/r10.rls